force-app/main/default/objects/X7S_Files_Criteria_Set__mdt/X7S_Files_Criteria_Set__mdt.object-meta.xml
<CustomObject>
    <description>Criteria set for 7S Files accelerator from 7Summits.</description>
    <label>7S Files Criteria Set</label>
    <pluralLabel>7S Files Criteria Sets</pluralLabel>
</CustomObject>