force-app/main/default/objects/X7S_Files_Criteria_Set__mdt/fields/Custom_Logic__c.field-meta.xml
<CustomField>
    <fullName>Custom_Logic__c</fullName>
    <description>Specify share logic. Eg. 1 OR 2</description>
    <inlineHelpText>Specify the share logic to apply to the assigned sharing criteria for this criteria set.</inlineHelpText>
    <label>Custom Logic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>