force-app/main/default/objects/X7S_Files_Criteria_Set__mdt/fields/Default_Logic__c.field-meta.xml
<CustomField>
    <fullName>Default_Logic__c</fullName>
    <defaultValue>&quot;AND&quot;</defaultValue>
    <inlineHelpText>Default Logic:
All of the conditions are met (AND)
Any of the conditions are met (OR)
Customize the logic</inlineHelpText>
    <label>Default Logic</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>