force-app/main/default/objects/X7S_Files_Criteria_Set__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Criteria set name</description>
    <inlineHelpText>Criteria set name</inlineHelpText>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>