force-app/main/default/objects/X7S_Files_Criteria_Set__mdt/listViews/Detail.listView-meta.xml
<ListView>
    <fullName>Detail</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Default_Logic__c</columns>
    <columns>Custom_Logic__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detail</label>
</ListView>